pushing name change

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2116,7 +2116,7 @@ input, select, textarea {
 
 		#logo h1 {
 			position: relative;
-			color: #fff;
+			color: black;
 			font-weight: 600;
 			font-size: 1em;
 			line-height: 1em;
